--- a/index.html
+++ b/index.html
@@ -1,37 +1,157 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper Scissor</title>
+        <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Rock paper Scissors</h1>
+    <div class="choices">
+        <div class="choice" id="rock">
+            <img src="rock.png">
+            <img src="" alt="">
+        </div>
+         <div class="choice" id="paper">
+            <img src="paper.png">
+            <img src="" alt="">
+        </div>
+         <div class="choice" id="scissors">
+            <img src="scissors.png">
+        </div>
+    </div>
+
+    <div class="score-board">
+        <div class="score">
+            <p id ="user-score">0</p>
+            <p>You</p>
+        </div>
+        <div class="score">
+            <p id="comp-score">0</p>
+            <p>Comp</p>
+        </div>
+    </div>
+    <div class="msg-container">
+        <p id="msg">Play Your Move</p>
+    </div>
+<script src="app.js"></script>
+</body>
+</html> -->
+
+
+<!-- HERE I HAVE USED A DEVELOPER'S NEON EFFECT IN MY GAME
+    ABOVE CODE IS THE ORIGINAL OR SIMPLE UI -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body, html, #app {
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            touch-action: pan-up;
+            color: #ffffff;
+            font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            text-shadow: 0 0 5px #ffffff, 0 0 20px #000, 0 0 30px #000;
+        }
+
+        #app {
+            position: relative;
+        }
+
+        #app canvas {
+            display: block;
+            position: fixed;
+            z-index: -1;
+            top: 0;
+        }
+
+        .choices {
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+        }
+
+        .choice {
+            margin: 0 20px;
+            text-align: center;
+        }
+
+        .choice img {
+            width: 100px;
+            height: 100px;
+        }
+
+        .score-board {
+            display: flex;
+            justify-content: center;
+            margin: 20px 0;
+        }
+
+        .score {
+            margin: 0 20px;
+        }
+
+        .msg-container {
+            margin: 20px 0;
+        }
+    </style>
 </head>
 <body>
-    <main>
-        <h1>Tic Tac Toe</h1>
-        <p>Let's begin the game! :)</p>
-
-        <div class="Msg hide">
-            <button class="newgame">New Game!</button>
-            <h2 class="Winnertext"></h2>
-        </div>
-
-        <div class="container">
-            <div class="game">
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
+    <div id="app">
+        <h1>Rock Paper Scissors</h1>
+        <div class="choices">
+            <div class="choice" id="rock">
+                <img src="rock.png" alt="Rock">
+            </div>
+            <div class="choice" id="paper">
+                <img src="paper.png" alt="Paper">
+            </div>
+            <div class="choice" id="scissors">
+                <img src="scissors.png" alt="Scissors">
             </div>
         </div>
 
-        <button class="reset">Reset Game!</button>
-    </main>
-    <script src="app.js"></script> <!-- Place script tag before closing body tag -->
+        <div class="score-board">
+            <div class="score">
+                <p id="user-score">0</p>
+                <p>You</p>
+            </div>
+            <div class="score">
+                <p id="comp-score">0</p>
+                <p>Comp</p>
+            </div>
+        </div>
+        <div class="msg-container">
+            <p id="msg">Play Your Move</p>
+        </div>
+    </div>
+    <script src="app.js"></script>
+    <script type="module">
+        import { neonCursor } from 'https://unpkg.com/threejs-toys@0.0.8/build/threejs-toys.module.cdn.min.js';
+
+        neonCursor({
+            el: document.getElementById('app'),
+            shaderPoints: 16,
+            curvePoints: 80,
+            curveLerp: 0.5,
+            radius1: 5,
+            radius2: 30,
+            velocityTreshold: 10,
+            sleepRadiusX: 100,
+            sleepRadiusY: 100,
+            sleepTimeCoefX: 0.0025,
+            sleepTimeCoefY: 0.0025
+        });
+    </script>
 </body>
 </html>
